new info and added style

--- a/portofolio.html
+++ b/portofolio.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+p{
+font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+body{
+    background-color: aqua;
+}
+    </style>
 </head>
 <body>
-    Mans vārds Aleksis Aleksandrs Eglītis 
-    Mācos pašlaik VTDT jeb Vidzemes Tehnoloģiju un dizaina tehnikumā
-    Un es esmu 17 gadus vecs.
+   <p>Mans vārds Aleksis Aleksandrs Eglītis ,<br>
+    Mācos pašlaik VTDT jeb Vidzemes Tehnoloģiju un dizaina tehnikumā par Programmēšanas tehniķi,<br>
+    Un es esmu 17 gadus vecs.<br></p> 
+
 </body>
 </html>
