--- a/portofolio.html
+++ b/portofolio.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
 p{
-font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+font-family:fantasy;
 }
 body{
     background-color: aqua;
