--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>My Portfolio</h1>
+            <h1>Mans Portfolio</h1>
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
@@ -23,29 +23,29 @@
 
     <section id="about" class="section">
         <div class="container">
-            <h2>About Me</h2>
-            <p>Hello! I'm a passionate web developer with a love for creating clean, responsive, and user-friendly websites. I specialize in front-end development and enjoy turning complex problems into simple, intuitive designs.</p>
+            <h2>Par mani</h2>
+            <p> Mans vārds ir Aleksis Aleksandrs Eglītis, mācos Vidzemes Tehnoloģiju un dizaina tehnikumā par Programmēšanas tehniķi un es esmu 17 gadus vecs.</p>
         </div>
     </section>
 
     <section id="projects" class="section">
         <div class="container">
-            <h2>My Projects</h2>
+            <h2>Mani projekti</h2>
             <div class="projects-grid">
                 <div class="project-card">
                     <img src="project1.jpg" alt="Project 1">
-                    <h3>Project 1</h3>
-                    <p>Brief description of project 1.</p>
+                    <h3>Projekts 1</h3>
+                    <p>Apraksts par 1 projektu</p>
                 </div>
                 <div class="project-card">
                     <img src="project2.jpg" alt="Project 2">
-                    <h3>Project 2</h3>
-                    <p>Brief description of project 2.</p>
+                    <h3>Projekts 2</h3>
+                    <p>Apraksts par 2 projektu</p>
                 </div>
                 <div class="project-card">
                     <img src="project3.jpg" alt="Project 3">
-                    <h3>Project 3</h3>
-                    <p>Brief description of project 3.</p>
+                    <h3>Projekts 3</h3>
+                    <p>Apraksts par 3 projektu</p>
                 </div>
             </div>
         </div>
@@ -53,18 +53,18 @@
 
     <section id="contact" class="section">
         <div class="container">
-            <h2>Contact Me</h2>
+            <h2>Sazinies ar mani!</h2>
             <form action="#" method="post">
-                <label for="name">Name</label>
+                <label for="name">Vārds</label>
                 <input type="text" id="name" name="name" required>
 
-                <label for="email">Email</label>
+                <label for="email">E-pasts</label>
                 <input type="email" id="email" name="email" required>
 
-                <label for="message">Message</label>
+                <label for="message">Ziņojums</label>
                 <textarea id="message" name="message" required></textarea>
 
-                <button type="submit">Send Message</button>
+                <button type="submit">Sūtīt</button>
             </form>
         </div>
     </section>
