--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 My Portfolio | Designed by Me</p>
+            <p>&copy; 2024 Mans Portfolio | Veidoja Aleksis </p>
         </div>
     </footer>
 </body>
